--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,9 +6,11 @@
         <img src="{{ .RelPermalink }}" id="homepage-logo" alt="ArkScript logo">
       {{ end }}
     </div>
-    <div class="col-lg-9 col-xl-8 text-center">
-      <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-cta rounded-pill btn-lg my-3" href="/docs/{{ if site.Params.doks.docsVersioning }}{{ site.Params.doks.docsVersion }}/{{ end }}prologue/getting_started/" role="button">Getting started</a>
+    <div class="col-lg-9 col-xl-8 text-center row align-items-center">
+      <div>
+        <p class="lead">{{ .Params.lead | safeHTML }}</p>
+        <a class="btn btn-primary btn-cta rounded-pill btn-lg my-3" href="/docs/{{ if site.Params.doks.docsVersioning }}{{ site.Params.doks.docsVersion }}/{{ end }}prologue/getting_started/" role="button">Getting started</a>
+      </div>
     </div>
     <div class="col-lg-9 col-xl-8">
       {{ .Content }}
