chore: add meta tag for fediverse creator

--- a/layouts/partials/head/custom-head.html
+++ b/layouts/partials/head/custom-head.html
@@ -2,4 +2,5 @@
 {{ if .OutputFormats.Get "OEMBED" }}
 <link href="{{ with .OutputFormats.Get "OEMBED" }}{{ .Permalink }}{{ end }}" rel="alternate" type="application/json+oembed" title="{{ .Title }}" />
 {{ end }}
+<meta name="fediverse:creator" content="@lexplt@hachyderm.io">
 
