feat(ux): add feedback button on website (except on home)

--- a/layouts/partials/head/script-header.html
+++ b/layouts/partials/head/script-header.html
@@ -1,1 +1,9 @@
 <!-- Insert scripts NOT needed by stylesheets here -->
+{{ if not .IsHome }}
+<script
+  src="https://sdk.feedback.one/v0/core.min.js"
+  data-project-id="019b8efc-f01d-7df0-afa3-aaccdd079a50"
+  defer
+></script>
+{{ end }}
+
